--- a/mobile/member/css/member_check.css
+++ b/mobile/member/css/member_check.css
@@ -8,22 +8,22 @@
 .member_tab span{font-size: 24px;padding: 10px;margin: 0 10px;color: #000;font-weight: bold} */
 
 .topline{overflow: hidden;}
-h1 .logo{display: block; font-family: 'Roboto', sans-serif; font-weight: 700; font-size: 5em; color: #09c; text-align: center; margin: 50px 0;}  
+h1 .logo{display: block; font-family: 'Roboto', sans-serif; font-weight: 700; font-size: 4em; color: #09c; text-align: center; margin: 50px 0;}  
      /* background: url(../../common/images/toplogo.jpg); */
 h2{font-size: 3em; margin-bottom: 30px; font-family: 'Nanum Gothic', sans-serif; font-weight: 700; text-align: center;}
 
 form{width: 96%; margin: 0 2%;}
 
 .join{text-align: left;}
-h3{font-size: 2em; margin: 60px 0 30px; font-family: 'Nanum Gothic', sans-serif;}
-.policy{margin-bottom: 20px; padding: 2%; font-size: 2em; height: 400px;
+h3{font-size: 2.5em; margin: 60px 0 30px; font-family: 'Nanum Gothic', sans-serif;}
+.policy{margin-bottom: 20px; padding: 2%; font-size: 2.5em; height: 200px;
     overflow-y: scroll; line-height: 1.5em; border: 1px solid #ddd; background: #fff;}
-.check{font-size: 1.5em;}
-.check input[name="agree"]{
+.check{font-size: 2.5em;}
+/* .check input[name="agree"]{
 	width: 20px;
 	height: 20px;
 	cursor: pointer;
-}
+} */
 .check input[name="agree"]:checked {background-color: #666666;}
 /* .check input[type="checkbox" i]{padding: 10px;} */
 
@@ -31,7 +31,7 @@ h3{font-size: 2em; margin: 60px 0 30px; font-family: 'Nanum Gothic', sans-serif;
 .button{overflow: hidden; width: 90%; margin: 0 5%; padding: 50px 0; text-align: center;}
 .button li{width: 30.33%; margin: 0 1%; float: left;}
 .button li a{display: block; width: 100%; padding: 20px 0; background: #09c; border-radius: 5px;
-    font-family: 'Nanum Gothic', sans-serif; font-weight: 700; font-size: 2em; color: #fff;}
+    font-family: 'Nanum Gothic', sans-serif; font-weight: 700; font-size: 2.5em; color: #fff;}
 .button li:nth-of-type(1) a{background: #666;}
 
 /* 
